# serializer version: 1
# name: test_fallback_store_switches_to_polars_components[inmemory-duckdb-md5]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      'all_local',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '9680e64f98095f33d4f6b3483eeae18e',
        }),
        dict({
          'f_default': '840f504ce2bcb164ea8fa1255e9bb13e',
        }),
        dict({
          'f_default': 'df9e90133f994eeb3557db86a8172bf5',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      'with_fallback',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '9680e64f98095f33d4f6b3483eeae18e',
        }),
        dict({
          'f_default': '840f504ce2bcb164ea8fa1255e9bb13e',
        }),
        dict({
          'f_default': 'df9e90133f994eeb3557db86a8172bf5',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_switches_to_polars_components[inmemory-duckdb-xxhash32]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      'all_local',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '3668655929',
        }),
        dict({
          'f_default': '265803511',
        }),
        dict({
          'f_default': '3647621169',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      'with_fallback',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '3668655929',
        }),
        dict({
          'f_default': '265803511',
        }),
        dict({
          'f_default': '3647621169',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_switches_to_polars_components[inmemory-duckdb-xxhash64]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      'all_local',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '5543135808149806155',
        }),
        dict({
          'f_default': '6632197453289392490',
        }),
        dict({
          'f_default': '13582969152183931506',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      'with_fallback',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '5543135808149806155',
        }),
        dict({
          'f_default': '6632197453289392490',
        }),
        dict({
          'f_default': '13582969152183931506',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_warning_issued[inmemory-duckdb-md5]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      False,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '9680e64f98095f33d4f6b3483eeae18e',
        }),
        dict({
          'f_default': '840f504ce2bcb164ea8fa1255e9bb13e',
        }),
        dict({
          'f_default': 'df9e90133f994eeb3557db86a8172bf5',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      True,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '9680e64f98095f33d4f6b3483eeae18e',
        }),
        dict({
          'f_default': '840f504ce2bcb164ea8fa1255e9bb13e',
        }),
        dict({
          'f_default': 'df9e90133f994eeb3557db86a8172bf5',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_warning_issued[inmemory-duckdb-xxhash32]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      False,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '3668655929',
        }),
        dict({
          'f_default': '265803511',
        }),
        dict({
          'f_default': '3647621169',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      True,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '3668655929',
        }),
        dict({
          'f_default': '265803511',
        }),
        dict({
          'f_default': '3647621169',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_warning_issued[inmemory-duckdb-xxhash64]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      False,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '5543135808149806155',
        }),
        dict({
          'f_default': '6632197453289392490',
        }),
        dict({
          'f_default': '13582969152183931506',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      True,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'f_default': '5543135808149806155',
        }),
        dict({
          'f_default': '6632197453289392490',
        }),
        dict({
          'f_default': '13582969152183931506',
        }),
      ]),
    }),
  })
# ---
